--- a/catch-of-the-day/src/css/_animations.styl
+++ b/catch-of-the-day/src/css/_animations.styl
@@ -5,3 +5,37 @@
   appear Must set transitionAppear={true} on animation component
 */
 
+.order-enter
+  background red
+  transition all 0.9s
+  transform translateX(-120%) rotate(1000deg)
+  max-height 0
+  padding 0 !important
+  &.order-enter-active
+    background yellow
+    max-height 60px
+    padding 2rem 0 !important
+    transform translateX(0) rotate(0);
+
+.order-leave
+  transition all 0.5s
+  transform translateX(0)
+  &.order-leave-active
+    transform translateX(120%)
+    max-height 0
+    padding 0
+
+.count-enter
+  transition all .25s
+  transform translateY(100%) //start off screen
+  &.count-enter-active
+    transform translateY(0) //put it in it's normal resting position
+
+.count-leave
+  transition all .25s
+  position absolute
+  left 0
+  bottom 0
+  transform translateY(0) // start where it is
+  &.count-leave-active
+    transform translateY(-100%)
