--- a/catch-of-the-day/src/css/style.css
+++ b/catch-of-the-day/src/css/style.css
@@ -1,16 +1,18 @@
 .order-enter {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  -webkit-transform: translateX(-120%);
-          transform: translateX(-120%);
+  background: #f00;
+  -webkit-transition: all 0.9s;
+  transition: all 0.9s;
+  -webkit-transform: translateX(-120%) rotate(1000deg);
+          transform: translateX(-120%) rotate(1000deg);
   max-height: 0;
   padding: 0 !important;
 }
 .order-enter.order-enter-active {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  background: #ff0;
   max-height: 60px;
   padding: 2rem 0 !important;
+  -webkit-transform: translateX(0) rotate(0);
+          transform: translateX(0) rotate(0);
 }
 .order-leave {
   -webkit-transition: all 0.5s;
@@ -19,10 +21,10 @@
           transform: translateX(0);
 }
 .order-leave.order-leave-active {
-  max-height: 0;
-  padding: 0;
   -webkit-transform: translateX(120%);
           transform: translateX(120%);
+  max-height: 0;
+  padding: 0;
 }
 .count-enter {
   -webkit-transition: all 0.25s;
@@ -255,6 +257,7 @@ h3 {
 }
 header.top {
   text-align: center;
+  background-color: #d12028;
 }
 header.top h1 {
   font-size: 14.4rem;
